# telegrambots

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: publish-to-pypi.yml
src/telegrambots/wrapper/: __init__.py  api_response_exception.py  client.py  serializations.py
src/telegrambots/wrapper/_client_utilities/: __init__.py  _client_getter.py  _client_setter.py  client_targetable.py
src/telegrambots/wrapper/schema/: README.md  generator.py
src/telegrambots/wrapper/types/: api_method.py  api_multipart_method.py  api_object.py  api_result.py
src/telegrambots/wrapper/types/methods/: __init__.py  add_sticker_to_set.py  answer_callback_query.py  answer_inline_query.py  answer_pre_checkout_query.py  answer_shipping_query.py  answer_web_app_query.py  approve_chat_join_request.py  ban_chat_member.py  ban_chat_sender_chat.py  close.py  copy_message.py  create_chat_invite_link.py  create_new_sticker_set.py  decline_chat_join_request.py  delete_chat_photo.py  delete_chat_sticker_set.py  delete_message.py  delete_my_commands.py  delete_sticker_from_set.py  delete_webhook.py  edit_chat_invite_link.py  (+66 more)
tests/: test_config.py
tests/wrapper/chat_member_related/: test_get_chat_members.py
tests/wrapper/chat_related/: test_chat_info_related.py  test_get_chat_members.py
tests/wrapper/getting_updates/: test_get_updates.py
tests/wrapper/sending_messages/: test_send_media_message.py  test_send_text_message.py
tests/wrapper/serializations/: test_common_updates.py  test_custom_deserialize.py
tests/wrapper/updating_messages/: test_update_text_messages.py
(+134 files in other folders)
