[metadata]
name = telegrambots
version = 0.0.13-preview
author = immmdreza
author_email = ir310022@gmail.com
description = A pure and modern python package for telegram bots.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/python-telegrambots/telegrambots
project_urls =
    Bug Tracker = https://github.com/immmdreza/python-telegrambots/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    aiohttp==3.8.1
include-package-data = True

[options.packages.find]
where = src
telegrambots = py.typed